fix z-index

--- a/src/views/list/list.scss
+++ b/src/views/list/list.scss
@@ -55,6 +55,7 @@
         width: 40px;
         transition: width 0.3s;
         background-color: colors.$primary-accent;
+        z-index: 999999;
     }
     .delete__menu {
         left: 2em;
@@ -174,7 +175,7 @@ body.dark {
 @media screen and (max-height: 500px) {
     .list {
         &:focus-within {
-            .delete__menu {
+            .delete__menu, .assign__menu {
                 display: none;
             }
             .checkbox-container {
